# vaultnotes

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/vaultnotes/: __main__.py  build.py  cli.py  config.py  github.py  integrity.py  rag.py  schedule_macos.py  sync.py
src/vaultnotes/templates/: config.yaml.tmpl  launchd.plist.tmpl  notes.html.tmpl
src/vaultnotes/templates/rag/chat/: chat.css  chat.js  config.json.tmpl  index.html
src/vaultnotes/templates/rag/scripts/: index-notes.mjs
src/vaultnotes/templates/rag/worker/: wrangler.toml.tmpl
src/vaultnotes/templates/rag/worker/src/: index.js
tests/: test_end_to_end.py
tests/fixtures/mini_vault/ProjA/: entry.md  index.md
tests/fixtures/mini_vault/ProjB/: notes.md
